--- a/src/app/MyComponent/todo-itemm/todo-itemm.component.html
+++ b/src/app/MyComponent/todo-itemm/todo-itemm.component.html
@@ -1,6 +1,10 @@
 <div class="my-3">
-    <h2>{{todo.title}}</h2>
+    <h2 [ngClass]="{'strike': !todo.active}">{{todo.title}}</h2>
     <p class="mt-2">{{todo.description}}</p>
+    <div class="mb-3 form-check">
+        <input (click)="onCheckClick(todo)" class="form-check-input" type="checkbox" id="active">
+        <label for="active" class="form-check-label">Todo Active</label>
+    </div>
     <button class="btn btn-danger" (click)="onClick(todo)">
         Delete  
     </button>
