--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
   </nav>
 
   <div class="container">
-    <h1 class="text-center">To do list by angular</h1>
+    <h1 class="text-center">To do list </h1>
     <app-todos></app-todos>
   </div>
 </main> 
